2000-08-25  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (toplevel): Add comment (Raw JIS header decode in Mew).

	* emacs/mhc-mew.el (mhc-mew/cs-m17n): New constant.
	(mhc-mew-decode-header): Support mew-1.95alpha version.
	(mhc-mew-setup): Remove mhc-mew-decode-header.

	* emacs/mhc-parse.el (mhc-parse/internal-parser): Bind
	case-fold-search is t, when parse header. (X-Mail-Count: 00976)

2000-08-22  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-file.el (mhc-file-sync): Remove rescan feature.

	* emacs/mhc-sync.el (mhc-sync/start-process): Rescan after mhc-sync
	command.

2000-08-21  KOIE Hidetaka <hide@koie.org>,
	TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-file.el (mhc-file-line-status-strings): New variable
	to customze status string.

2000-08-21  Yoshinari Nomura  <nom@quickhack.net>

	* mhc-make.rb (search_library): pass all args in a correct way.

	* emacs/mhc-guess.el (toplevel  mhc-guess-date-regexp-list):
	modify regexp.

	* ruby-ext/extconf.rb.in: add have_library('socket') for solaris.

2000-08-10  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-wl.el (mhc-wl-summary-exit): Don't switch to original
	buffer if it is already appeared.

	* emacs/mhc.el (mhc-browse-x-url-function): New user option.
	(mhc-browse-x-url): New function.

	* emacs/mhc-xmas.el (mhc-xmas-icon-alist): Added "Link" entry.
	(mhc-icon-function-alist): Ditto.

	* emacs/mhc-draft.el (mhc-draft-finish): Removed meaningless comment.

	* emacs/mhc-bm.el (mhc-bm-icon-alist): Added "Link" entry.
	(mhc-icon-function-alist): Ditto.
	(mhc-put-icon): Put 'mouse-face overlay.

	* icons/Link.xbm, icons/Link.xpm: New file.

2000-08-08  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-eword-decode-string): Fix broken
	match-data.

2000-08-07  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cmail.el (mhc-cmail-dummy-file): New variable.
	(Thanks to Mr. WATANABE Hirofumi)